hphp/test/slow/constant/globals-array-constant.php.expectf
Fatal error: syntax error, unexpected T_VARIABLE in %s/globals-array-constant.php on line 4
